# phasmophobia

./: Cargo.toml  index.html
pkg/: phasmophobia.wasm
src/: bathroom.rs  bedroom.rs  cararea.rs  food.rs  fr.rs  fronthall.rs  main.rs  mainmenu.rs  roompicker.rs  vanscreen.rs
src/modules/: mod.rs
