[package]
name = "phasmophobia"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.15"
rayon = { version = "1.7", optional = true }
[features]
scale = []
default = ["native"]
native = ["rayon"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.7"
arboard = { version = "3.6", features = ["wayland-data-control"] }